update the start docker

--- a/uwsgi_docker.ini
+++ b/uwsgi_docker.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 http = :8888
 chdir = /django_server/
-wsgi-file = indicator_mark/wsgi.py
+wsgi-file = server/wsgi.py
 processes = 4
 threads = 2
 stats = 127.0.0.1:8887
